# sigil-os

./: .gitignore  Aether_OS_Product_Plan_v3.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  Makefile  PHASE2_MISSION.md  README.md  flake.nix  iso.nix  phase_0.md  services.nix
.github/workflows/: build-vm-images.yml  ci.yml
.specify/memory/: constitution.md
hardware/: apple-vf.nix  hyper-v.nix  mbp-2017.nix  vm.nix
modules/: aether-keybindings.nix  aether-shell.nix  sigil-base.nix  sigil-dev.nix  sigil-hyprland.nix  sigil-inference.nix  sigil-keybindings.nix  sigil-plymouth.nix  sigil-shell.nix  sigil-tools.nix  sigild.nix
modules/themes/: light.nix
phases/: phase_2_shell_v0.md  phase_3_intelligence_polish.md
pkgs/: make-disk-image.nix
pkgs/sigil-plymouth/: default.nix
pkgs/sigil-plymouth/theme/: sigil.plymouth  sigil.script
shell/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
shell/.storybook/: main.ts  preview.ts
shell/src/: app.tsx  main.tsx
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: apps.rs  browser.rs  containers.rs  cwd.rs  daemon_client.rs  editor.rs  files.rs  git.rs  hyprland.rs  main.rs  pty.rs  remote_pty.rs  settings.rs
shell/src/components/: AppRail.tsx  BrowserView.tsx  CodeEditor.tsx  CommandPalette.stories.tsx  CommandPalette.tsx  ContainerView.tsx  ContentPane.tsx  ConversationView.tsx  EditorView.tsx  EventsView.tsx  ExtensionsView.tsx  FileTree.stories.tsx  FileTree.test.tsx  FileTree.tsx  GitView.tsx  GreetingCard.tsx  InputBar.stories.tsx  InputBar.test.tsx  InputBar.tsx  InsightsView.tsx  LandingScreen.tsx  LeftRail.stories.tsx  LeftRail.tsx  PathBar.tsx  SettingsPanel.stories.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SuggestionBar.stories.tsx  SuggestionBar.tsx  TerminalView.tsx  Toast.stories.tsx  Toast.test.tsx  Toast.tsx
shell/src/context/: AppContext.test.tsx  AppContext.tsx  ToastContext.tsx
shell/src/layouts/: index.ts
shell/src/lib/: context.test.ts  context.ts  markdown.test.ts  markdown.ts  platform.ts  progressive-reveal.test.ts  progressive-reveal.ts
shell/src/styles/: global.css
specs/001-sigil-shell-v0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-native-browser-webview/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-shell-font-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-shell-views-impl/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/005-daemon-network-transport/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-plymouth-boot-splash/: plan.md  research.md  spec.md  tasks.md
(+12 files in other folders)
