[package]
name = "sigil-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "unstable"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.20", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
sha2 = "0.10"
libc = "0.2"

# Linux-only: GTK browser overlay + Docker via Unix socket
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# macOS: SSH-based remote PTY for VM terminal access
[target.'cfg(target_os = "macos")'.dependencies]
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
